test/error2.frt.test
ERROR
Error : unclosed {| at "error2.frt:1:1"