test/error2.frt
{!attribute string suddenly ends without @}
